[package]
name = "python_rust"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.pyo3]
version = "0.22.2"
features = ["extension-module"]  # 制作Rust模块

[lib]
name = "python_rust"
crate-type = ["cdylib"]  # 表示要编译生成一个动态系统库（C-compatible dynamic library）C 兼容的动态库

# 当编译完成后，你会得到一个可以直接在 Python 中使用的动态库文件
# （在 Windows 上是 .dll，在 macOS 上是 .dylib，在 Linux 上是 .so）。